Change VITE_API_URL and add backend port settings
Updated VITE_API_URL and added backend port configurations.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,4 +20,8 @@ GEMINI_API_KEY=your-gemini-api-key
 DEEPSEEK_API_KEY=your-deepseek-api-key
 
 # Frontend
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=http://localhost:5007
+
+# Puerto del Backend: por defecto 5007
+# Puerto alternativo para desarrollo: 5008
+# Puerto alternativo para pruebas: 5009
